# Persisting

./: .gitignore  404.html  Cargo.toml  README.md  index.html  justfile  llms.binding.md  objects.inv  pyproject.toml  sitemap.xml
.cargo/: config.toml
api_reference/: index.html
benchmark/: README.md  throughput_stress.py
crates/persisting-capture/: Cargo.toml
crates/persisting-capture/src/: admin.rs  auth.rs  capture_call.rs  config.rs  dead_letter.rs  debug.rs  dialogue.rs  dialogue_extract.rs  discover_daemon.rs  forward.rs  http_headers.rs  lib.rs  markdown_trajectory.rs  models_list.rs  peer_process.rs  protocol.rs  provider.rs  proxy.rs  reconcile.rs  record.rs  router.rs  run_config.rs  run_env.rs  service.rs  session_chain.rs  session_client.rs  session_index.rs  session_storage.rs  sink.rs  subagent_link.rs  usage.rs
crates/persisting-capture/src/conversion/: messages_completions.rs  mod.rs  responses_completions.rs  responses_stream.rs  stream.rs  tool_call.rs
crates/persisting-capture/src/engine/: apply_queue.rs  egress.rs  event.rs  invocation.rs  markdown_policy.rs  mod.rs  prepare.rs  runtime.rs  tests.rs  types.rs  wal.rs
crates/persisting-capture/src/engine/actors/: mod.rs  registry.rs  run.rs  session.rs  story.rs
crates/persisting-capture/src/engine/io/: markdown.rs  mod.rs
crates/persisting-capture/src/engine/story/: call.rs  context.rs  event.rs  ids.rs  mod.rs  model.rs  turn_machine.rs
crates/persisting-capture/src/engine/tests/: events.rs  fixtures.rs  markdown_stream.rs  mod.rs  reliability.rs  replay_dedup.rs  story.rs  support.rs  wal.rs
crates/persisting-capture/src/engine/wire/: headers.rs  mod.rs  registry.rs  run.rs  session.rs  story.rs
crates/persisting-capture/src/injection/: env.rs  host_identity.rs  mod.rs  peer.rs
crates/persisting-capture/src/proxy/: auth.rs  cancel_stream.rs  capture_dispatch.rs  common.rs  deepseek_reasoning.rs  dispatch.rs  forward.rs  http_headers.rs  llm_capture.rs  mod.rs  model.rs  models_list.rs  reasoning.rs  router.rs  state.rs  streaming.rs  upstream.rs
crates/persisting-capture/src/runtime/: discover.rs  mod.rs  run_config.rs  run_env.rs  service.rs
crates/persisting-capture/src/session/: call.rs  index.rs  mod.rs  peer_process.rs
crates/persisting-capture/src/storage/: convert.rs  dialogue.rs  dialogue_extract.rs  egress.rs  event_row.rs  frontmatter.rs  lance_row.rs  lifecycle.rs  markdown.rs  markdown_pipeline.rs  markdown_policy.rs  mod.rs  path_layout.rs  record.rs  session.rs  session_client.rs  sink.rs  story_coords.rs  story_snapshots.rs  subagent_link.rs
crates/persisting-capture/src/storage/dialogue/: block.rs  draft.rs  fields.rs  import.rs  mod.rs  tests.rs  view.rs
crates/persisting-capture/src/storage/dialogue_extract/: assistant.rs  common.rs  completions.rs  heuristics.rs  messages.rs  mod.rs  request.rs  responses.rs
crates/persisting-capture/src/storage/markdown/: body.rs  io.rs  mod.rs  parse.rs  paths.rs  preamble.rs  tests_parser.rs  tests_upsert.rs  types.rs
crates/persisting-capture/src/storage/subagent_link/: enrich.rs  extract.rs  match_.rs  mod.rs  registry.rs  tests.rs  types.rs
crates/persisting-capture/tests/: README.md  ag_fixture_tests.rs  capture_apps_claude.rs  llm_fixtures.rs  tlv_golden.rs
crates/persisting-capture/tests/capture/apps/claude/: dialogue_extract.rs  markdown_filter.rs  mod.rs  routing.rs  spawn_link.rs  support.rs
crates/persisting-capture/tests/capture/apps/claude/fixtures/: agent_launch_tool_result.json  agent_tool_stream.sse  flash_session_probe.json  main_user_pro.json  subagent_explore_flash.json  task_notification.json
crates/persisting-capture/tests/fixtures/: README.md
crates/persisting-capture/tests/fixtures/local/: README.md
crates/persisting-capture/tests/fixtures/local/requests/responses/: codex_basic.json
crates/persisting-capture/tests/fixtures/local/response/completions/: stream_head.txt  tool_call.json
crates/persisting-capture/tests/fixtures/requests/responses/: codex_tool_roundtrip.json
crates/persisting-capture/tests/fixtures/response/completions/: stream_tool_call.txt
crates/persisting-capture/tests/fixtures/tlv/: demo-run-001.md
crates/persisting-capture/tests/support/: ag_capture_cases.rs  ag_fixtures.rs  mod.rs
crates/persisting-cli/: Cargo.toml
crates/persisting-cli/src/: judge_manual.rs  main.rs  stats_output.rs  terminal_markdown.rs  trajectory_detail.rs  trajectory_format.rs  trajectory_stdout_toml.rs
crates/persisting-cli/src/capture/: daemon.rs  debug_setup.rs  in_process.rs  merge.rs  mod.rs  project_path.rs  reconcile.rs  record.rs  replay_dead_letter.rs  run.rs  usage.rs
crates/persisting-cli/src/capture/providers/: claude.rs  cursor.rs  gateway.rs  ide_jsonl.rs  mod.rs
crates/persisting-cli/tests/: parse_trajectory_example_toml.rs
crates/persisting-core/: Cargo.toml  README.md
crates/persisting-core/src/: block_io.rs  lib.rs  mmap_region.rs  page_fault_darwin.rs  tiered_loop.rs  uffd.rs
crates/persisting-engine/: Cargo.toml
crates/persisting-engine/src/: abi.rs  bridge.rs  dispatch.rs  jobs.rs  lib.rs  ron_api.rs
crates/persisting-engine/src/search/: agent.rs  ivf_physical_reorder.rs  lance.rs  mod.rs
crates/persisting-engine/src/trajectory/: convert.rs  expand.rs  judge.rs  judge_stats.rs  mod.rs  path.rs  storage.rs
crates/persisting-engine/src/trajectory/layers/: judge_sidecar.rs  manifest.rs  mod.rs
crates/persisting-engine/src/trajectory/store/: markdown.rs  mod.rs  rows.rs  vortex.rs
crates/persisting-engine/tests/: search_integration.rs
crates/persisting-proto/: Cargo.toml
crates/persisting-proto/src/: invoke_abi.rs  lib.rs  messages.rs  rpc_dispatch.rs
design/: index.html
docs/: Makefile  PERSISTING_REVIEW_AND_ROADMAP.md  PERSISTING_VS_PULSING_REVIEW.md  PULSING_REVIEW_AND_ROADMAP.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
examples/: 01_core_components.py  02_queue_options.py  03_sampler.py  04_producer_consumer.py  05_multiprocess_producer_consumer.py  06_tiered_lazy_prefetch_eviction.py  README.md  __init__.py
(+163 files in other folders)
