[project]
name = "persisting"
version = "0.1.0"
description = "Persistent Storage for Parameters, KV Cache, and Trajectories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "reiase"}
]
dependencies = [
    "pulsing",
]

[project.optional-dependencies]
lance = [
    "lance>=0.9.0",
    "pyarrow>=14.0.0",
]
all = [
    "persisting[lance]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["persisting"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

