[project]
name = "persisting"
version = "0.1.0"
description = "Persistent Storage for Parameters, KV Cache, and Trajectories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "reiase"}
]
dependencies = [
    "pulsing",
    "tensordict>=0.6.0",
]

[project.optional-dependencies]
lance = [
    "lance>=0.9.0",
    "pyarrow>=14.0.0",
]
safetensors = [
    "safetensors>=0.4.0",
]
all = [
    "persisting[lance]",
    "persisting[safetensors]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "maturin>=1.0",
]

[tool.maturin]
module-name = "persisting._core"
manifest-path = "crates/persisting-core/Cargo.toml"
python-packages = ["persisting"]
features = ["python-extension"]
sdist-include = ["LICENSE", "README.md"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]

