[package]
name = "persisting-capture"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Embedded OpenAI-compatible LLM proxy with trajectory capture (agentgateway routing subset)"

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
dirs = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "io-util"] }
tokio-stream = "0.1"
tower = "0.5"
tracing = "0.1"
url = "2"
regex = "1"
lazy_static = "1"
pulsing-actor = { workspace = true }
dashmap = "6"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "llm_fixtures"
path = "tests/llm_fixtures.rs"

[[test]]
name = "ag_fixture_tests"
path = "tests/ag_fixture_tests.rs"

[[test]]
name = "capture_apps_claude"
path = "tests/capture_apps_claude.rs"
