[package]
name = "persisting-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lightweight Persisting CLI (loads persisting-engine via dlopen)"

[[bin]]
name = "persisting"
path = "src/main.rs"

[dependencies]
anyhow = "1"
csv = "1.3"
clap = { version = "4", features = ["derive", "env"] }
libloading = "0.8"
persisting-proto = { path = "../persisting-proto" }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
