[package]
name = "persisting-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lightweight Persisting CLI (loads persisting-engine via dlopen)"

[[bin]]
name = "persisting"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
csv = "1.3"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
libloading = "0.8"
persisting-capture = { path = "../persisting-capture" }
persisting-engine = { path = "../persisting-engine" }
persisting-proto = { path = "../persisting-proto" }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
