[package]
name = "persisting-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust core for Persisting (TTAS, block I/O, tiered loop, page fault)"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
pyo3 = { version = "0.23", default-features = false, features = ["extension-module", "abi3-py310", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"
