[package]
name = "persisting-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persisting engine: Lance-backed search, Vortex trajectory, and stable C ABI"

[lib]
name = "persisting_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
lance = { version = "7.0.0", features = ["aws", "azure", "gcp"] }
lance-core = "7.0.0"
lance-index = "7.0.0"
lance-linalg = "7.0.0"
lance-table = "7.0.0"
futures = "0.3"
uuid = "1"
persisting-capture = { path = "../persisting-capture" }
persisting-proto = { path = "../persisting-proto" }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
vortex = { git = "https://github.com/reiase/vortex", branch = "feature/layout", default-features = true, features = ["tokio"] }
arrow-array = "58.3.0"
arrow-schema = "58.3.0"

[dev-dependencies]
persisting-proto = { path = "../persisting-proto" }
tempfile = "3"
