[package]
name = "persisting-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persisting RPC message types, protocol version, and bincode wire format"

[dependencies]
anyhow = "1"
bincode = { version = "2.0.1", default-features = false, features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
